# SeagrEnv

./: CMakeLists.txt  README.md  Sonnet messages to Opus.md  compile_flags.txt.bak
.cache/clangd/index/: bluetooth_win.cpp.B1D6D33434ACAEF2.idx  clipboard.cpp.E06F2D626E1B8762.idx  clipboard.h.4B7220FBBA18CBB6.idx  clipboard_win.cpp.E7A3A38178ED76F9.idx  config.cpp.04E4AC2690AB0F18.idx  config.h.27421B4D8705A8C4.idx  connection.cpp.8AC92562C1406A5E.idx  connection.h.2EDBCBC8152CC8A3.idx  database.cpp.A6EDFA5234FAF234.idx  database.h.2C6DBBDD4F6C109B.idx  device.cpp.5F316E31E89B1A86.idx  device.h.FB2D4DA81E2D9E37.idx  discovery.cpp.1AE1790A45F288CA.idx  discovery.h.17F70B4A1B03FF7C.idx  discovery_pimpl.h.766C503C9B8FF11F.idx  distance.cpp.8F68F3E250F854C3.idx  distance.h.8365D48A7BBD4447.idx  error.cpp.092046ACB9ABF674.idx  error.h.1354D7FB419A0A53.idx  platform.h.D86AE17B567A06D5.idx  seadrop.cpp.33D6C06C9518139A.idx  seadrop.h.145B301D78D05883.idx  security.cpp.226208AC491F6803.idx  security.h.A7B013491798415C.idx  transfer.cpp.F9183D39B2C0E896.idx  transfer.h.B40E3B4ACB86AEA4.idx  types.cpp.D15E333189690D66.idx  types.h.DA27DE93FBDF15D9.idx  wifi_direct_win.cpp.BEAC8AFB454B8A1B.idx
cmake/: SeaDropConfig.cmake.in
docs/: LINUX_SETUP.md
libseadrop/: CMakeLists.txt
libseadrop/include/seadrop/: clipboard.h  config.h  connection.h  database.h  device.h  discovery.h  distance.h  error.h  platform.h  protocol.h  seadrop.h  security.h  state_machine.h  transfer.h  types.h
libseadrop/src/: clipboard.cpp  clipboard_pimpl.h  config.cpp  connection.cpp  connection_pimpl.h  database.cpp  device.cpp  discovery.cpp  discovery_pimpl.h  distance.cpp  error.cpp  protocol.cpp  seadrop.cpp  security.cpp  state_machine.cpp  transfer.cpp  types.cpp
libseadrop/src/platform/linux/: bluetooth_linux.cpp  bluez_ble.cpp  bluez_ble.h  clipboard_linux.cpp  clipboard_linux.h  clipboard_platform_linux.cpp  dbus_helpers.h  wifi_direct_linux.cpp  wpa_supplicant.cpp  wpa_supplicant.h
libseadrop/src/platform/windows/: bluetooth_win.cpp  clipboard_win.cpp  wifi_direct_win.cpp
seadrop-qt/: CMakeLists.txt
seadrop-qt/resources/: resources.qrc  seadrop.desktop
seadrop-qt/src/: devicemodel.cpp  devicemodel.h  main.cpp  mainwindow.cpp  mainwindow.h  seadropbridge.cpp  seadropbridge.h  settingsdialog.cpp  settingsdialog.h  transferdialog.cpp  transferdialog.h
seadrop-qt/ui/: mainwindow.ui  settingsdialog.ui  transferdialog.ui
tests/: CMakeLists.txt
tests/integration/: test_full_transfer.cpp
tests/unit/: test_clipboard.cpp  test_device.cpp  test_distance.cpp  test_protocol.cpp  test_security.cpp  test_state_machine.cpp  test_transfer.cpp
